--- a/views/home.ejs
+++ b/views/home.ejs
@@ -74,7 +74,7 @@
           <div class="audioMsg flex"></div>
           <div class="player flex"></div>
         </div>
-        <div class="moreContent flex">
+        <div class="contentContainers flex">
           <div class="content__container content1__container flex" id="content1__container">
             <div class="content content1 flex" id="content1">
               <%- include('addFeedForm'); %>
