Style improvements due to ac56d42

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -752,8 +752,12 @@
       flex: 1;
       overflow-y: auto;
 
-      a:visited {
+      .link:visited {
         color: grey;
+
+        & span {
+          color: grey;
+        }
       }
 
       .article {
