--- a/src/scss/404.css
+++ b/src/scss/404.css
@@ -14,7 +14,7 @@ body * {
 .backgroundImage {
   height: 100%;
   width: 100%;
-  background-image: url('./wallpaper.png');
+  background-image: url('../wallpaper.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
