--- a/views/home.ejs
+++ b/views/home.ejs
@@ -95,7 +95,7 @@
     </main>
     <%- include('settings'); %>
     <div class="rssTooltip flex"></div>
-    <div class="confirmation">
+    <div class="confirmation click">
       <section class="confirmation__child flex">
         <h1 class="confirmation__child__title">Watch out !</h1>
         <span class="confirmation__child__content flex">
