Embeds style improvements and bug fixes

--- a/src/scss/pages/_chat.scss
+++ b/src/scss/pages/_chat.scss
@@ -66,6 +66,10 @@
           margin-left: 0.5em;
           font-style: italic;
         }
+
+        &__icon {
+          height: 1.5em;
+        }
       }
 
       .msg {
