--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -299,28 +299,72 @@
     min-width: 2em;
   }
 
-  .player {
-    height: min-content;
-    min-width: 50%;
-    width: 50%;
-    @include align(space-evenly, center);
-    @include flex-direction(row);
+  &__container {
+    width: 100%;
+    justify-content: space-around;
+
+    &__msg {
+      height: min-content;
+      width: 50%;
+      font-size: 1.4em;
+      min-width: 50%;
+
+      .playlistInfo {
+        width: min-content;
+        margin: 0 1.5vh;
+      }
+    }
+
+    &__player {
+      height: min-content;
+      min-width: 50%;
+      width: 50%;
+      @include align(space-evenly, center);
+      @include flex-direction(row);
+    }
+
+    .streamInfoContainer {
+      width: 50%;
+      margin: 0 1vh;
+      display: flex;
+      @include flex-direction;
+      flex: 1;
+      overflow: hidden;
+
+      .streamTitle {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        min-width: 0;
+        display: inline;
+        white-space: nowrap;
+      }
+
+      .YtId {
+        padding-top: 1%;
+      }
+
+      .YtId,
+      .streamTitle {
+        margin: 0;
+        text-align: center;
+      }
+    }
+    @media(max-width: 720px) {
+      flex-direction: column;
+
+      &__msg,
+      &__player {
+        width: 100%;
+      }
+
+      &__player {
+        margin-top: 1em;
+      }
+    }
   }
 
   &__player {
     width: 100%;
-  }
-
-  &Msg {
-    height: min-content;
-    width: 50%;
-    font-size: 1.4em;
-    min-width: 50%;
-
-    .playlistInfo {
-      width: min-content;
-      margin: 0 1.5vh;
-    }
   }
 
   &__remove {
@@ -333,39 +377,18 @@
     padding: 0.2%;
     border-radius: 45%;
   }
-
-  .streamInfoContainer {
-    width: 50%;
-    margin: 0 1vh;
-    display: flex;
-    @include flex-direction;
-    flex: 1;
-    overflow: hidden;
-
-    .streamTitle {
-      text-overflow: ellipsis;
-      overflow: hidden;
-      min-width: 0;
-      display: inline;
-      white-space: nowrap;
-    }
-
-    .YtId {
-      padding-top: 1%;
-    }
-
-    .YtId,
-    .streamTitle {
-      margin: 0;
-      text-align: center;
-    }
+  @media(max-width: 720px) {
+    width: 85%;
   }
 }
 
-.audio.playlist .audioMsg,
-.audio.playlist .player {
+.audio.playlist .audio__container__msg,
+.audio.playlist .audio__container__player {
   width: 47%;
   min-width: 47%;
+  @media(max-width: 720px) {
+    width: 100%;
+  }
 }
 
 .contentContainers {
