--- a/views/home.ejs
+++ b/views/home.ejs
@@ -71,8 +71,10 @@
         </div>
         <div class="audio">
           <img class="audio__remove removeContentBtn flex" alt="Remove the audio player" src="./src/scss/icons/interface/cross.svg">
-          <div class="audioMsg flex"></div>
-          <div class="player flex"></div>
+          <span class="audio__container flex">
+            <div class="audio__container__msg flex"></div>
+            <div class="audio__container__player flex"></div>
+          </span>
         </div>
         <div class="contentContainers flex">
           <div class="content__container content1__container flex" id="content1__container">
