Added bot avatar upload feature #1

--- a/src/scss/layouts/_settings.scss
+++ b/src/scss/layouts/_settings.scss
@@ -192,7 +192,7 @@
       color: black;
       border-radius: 15px;
       border: none;
-      background-color: lightblue;
+      background-color: $underline-input;
       padding: 1%;
       cursor: pointer;
     }
