--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -35,7 +35,7 @@
           </form>
         </div>
         <section class="msgContainer__botInfo flex">
-          <img class="msgContainer__botInfo__icon" src=<%-botIcon%> alt="Bot icon">
+          <img class="msgContainer__botInfo__icon" src="./src/scss/icons/interface/bot.png" alt="Bot icon">
           <p><%=botName%></p>
         </section>
       </section>
