--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -26,16 +26,16 @@
       </svg>
     </header>
     <main class="mainContainer flex">
-      <section class="msgContainer flex">
-        <div class="msgContainer__msgList flex">
-          <div class="msgContainer__msgList__list flex"></div>
-          <form class="msgContainer__msgList__form flex">
-            <input class="msgContainer__msgList__form__inputMsg" type="text" name="" value="" placeholder="Say something...">
-            <button class="msgContainer__msgList__form__sendBtn" type="submit" name="msgContainer__msgList__form__sendBtn">Send</button>
+      <section class="chatContainer flex">
+        <div class="chatContainer__msgList flex">
+          <div class="chatContainer__msgList__list flex"></div>
+          <form class="chatContainer__msgList__form flex">
+            <input class="chatContainer__msgList__form__inputMsg" type="text" name="" value="" placeholder="Say something...">
+            <button class="chatContainer__msgList__form__sendBtn" type="submit" name="chatContainer__msgList__form__sendBtn">Send</button>
           </form>
         </div>
-        <section class="msgContainer__botInfo flex">
-          <img class="msgContainer__botInfo__icon" src="./src/scss/icons/interface/bot.png" alt="Bot icon">
+        <section class="chatContainer__botInfo flex">
+          <img class="chatContainer__botInfo__icon" src="./src/scss/icons/interface/bot.png" alt="Bot icon">
           <p><%=botName%></p>
         </section>
       </section>
