Bot avatar can be loaded from a URL

--- a/src/scss/layouts/_settings.scss
+++ b/src/scss/layouts/_settings.scss
@@ -187,6 +187,14 @@
       width: 90%;
     }
 
+    .chatCustomizationForm {
+      &__btn,
+      &__comment,
+      &__inputUrl {
+        margin-top: 1.5em;
+      }
+    }
+
     .backgroundImageUploadForm__Btn,
     .chatCustomizationForm__btn {
       color: black;
