--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -42,6 +42,10 @@
       <input class="chatCustomizationForm__inputFile" type="file" name="chatBotAvatarUploadInput" accept="image/png, image/jpg">
       <input class="chatCustomizationForm__inputUrl" type="text" name="chatBotNameInput" value="" placeholder='Insert a new avatar URL'>
     </form>
+    <form class="botNameCustomizationForm flex" action="/" method="post">
+      <label class="botNameCustomizationForm__comment">This name is boooooring !</label>
+      <input class="botNameCustomizationForm__input" type="text" name="botName__input" placeholder="Insert a friendly name !">
+    </form>
     <span class="settings__BtnContainer">
       <button class="settings__child__cancelBtn" type="button" name="cancelSettings">Cancel</button>
       <button class="settings__child__saveBtn" type="submit" name="saveSettings">Save settings</button>
