--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -33,7 +33,7 @@
     <h3 class="settings__child__heading3 settings__child__heading">Weather forecast</h3>
     <span class="owmToken flex">
       <span class="owmToken__Comment">So you want to use weather forecast feature ? You can update your OpenWeatherMap API token here :</span>
-      <input class="owmToken__input" type="text" name="owmToken__input" value="" placeholder="OpenWeatherMap API token">
+      <input class="owmToken__input" type="password" name="owmToken__input" value="0123456789" placeholder="OpenWeatherMap API token">
     </span>
     <h3 class="settings__child__heading3 settings__child__heading">Chat</h3>
     <form class="chatCustomizationForm flex" action="/" enctype="multipart/form-data" method="post">
