Updated version number, wallpaper and style

--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -3,7 +3,7 @@
   align-items: $align;
 }
 @mixin background-image {
-  background-image: url("../wallpaper.png");
+  background-image: url("../wallpaper.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
