Code cleanup, bug fixes

--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -21,4 +21,12 @@ body {
     right: 0;
     @include background-image;
   }
+
+  .fixed {
+    position: fixed;
+  }
+
+  .hidden {
+    display: none;
+  }
 }
