--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -67,86 +67,79 @@
 
 .mainContainer {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   @include align(center, center);
   @include flex-direction;
 }
 
-.upperContainer {
-  display: inline-flex;
-  @include align(center, center);
+.converter {
+  display: none;
+  height: 3em;
+  width: 60%;
+  align-items: center;
   @include flex-direction;
-  width: 100%;
+  background-color: $contentBackground;
+  z-index: 1;
+  margin-bottom: 2%;
+  border-radius: 15px;
+  padding: 1%;
+  box-shadow: 10px 10px 12px 2px $contentBackground;
 
-  &__converter {
-    display: none;
-    height: 3em;
-    width: 60%;
-    align-items: center;
-    @include flex-direction;
-    background-color: $contentBackground;
-    z-index: 1;
-    margin-bottom: 2%;
-    border-radius: 15px;
-    padding: 1%;
-    box-shadow: 10px 10px 12px 2px $contentBackground;
+  &__body {
+    width: 100%;
+    justify-content: space-around;
 
-    .converter {
-      width: 100%;
-      justify-content: space-around;
-
-      & * {
-        z-index: 1;
-        font-size: 1em;
-      }
-
-      &__value1,
-      &__value2 {
-        height: 2em;
-        width: 13%;
-        color: black;
-      }
-
-      &__remove {
-        position: relative;
-        top: -50%;
-        left: 94%;
-        border-radius: 15px;
-        padding: 3px;
-        cursor: pointer;
-      }
-
-      & input {
-        width: 15%;
-        height: 2em;
-        @include input-style;
-        color: white;
-      }
-
-      .warning {
-        display: flex;
-        width: 100%;
-        height: 2em;
-        justify-content: center;
-        padding-top: 1%;
-        font-size: 1.1em;
-      }
+    & * {
+      z-index: 1;
+      font-size: 1em;
     }
-  }
 
-  .msgContainer {
-    width: auto;
-    height: auto;
-    padding: 0.75%;
-    margin: 1% 0;
-    border: 1px solid white;
-    border-radius: 15px;
-    background-color: $contentBackground;
-    z-index: 1;
+    &__value1,
+    &__value2 {
+      height: 2em;
+      width: 13%;
+      color: black;
+    }
+
+    &__remove {
+      position: relative;
+      top: -50%;
+      left: 94%;
+      border-radius: 15px;
+      padding: 3px;
+      cursor: pointer;
+    }
+
+    & input {
+      width: 15%;
+      height: 2em;
+      @include input-style;
+      color: white;
+    }
 
     .warning {
-      border: 1px solid red;
+      display: flex;
+      width: 100%;
+      height: 2em;
+      justify-content: center;
+      padding-top: 1%;
+      font-size: 1.1em;
     }
+  }
+}
+
+.msgContainer {
+  width: auto;
+  height: auto;
+  padding: 0.75%;
+  margin: 1% 0;
+  border: 1px solid white;
+  border-radius: 15px;
+  background-color: $contentBackground;
+  z-index: 1;
+
+  .warning {
+    border: 1px solid red;
   }
 }
 
@@ -159,6 +152,7 @@
   top: 0;
   width: 100%;
   z-index: 1;
+  margin-bottom: 2em;
 
   &::before {
     position: absolute;
@@ -175,9 +169,9 @@
   }
 
   .formContainer {
-    display: inline-flex;
     width: 50%;
     @include align(center, baseline);
+    @include flex-direction(column);
     background-color: white;
     padding: 0.5% 1%;
     border-radius: 2em;
@@ -192,7 +186,7 @@
       display: inline-flex;
       width: 100%;
       align-items: center;
-      font-size: 1.2em;
+      font-size: 1.1em;
 
       .questionBox {
         width: 100%;
@@ -230,51 +224,42 @@
         }
       }
     }
-  }
 
-  .suggestions {
-    font-size: 1.3em;
-    background-color: white;
-    width: 30%;
-    opacity: 0.7;
-    border-radius: 0 0 15px 15px;
-    overflow-y: auto;
-    margin-bottom: 3%;
-    box-shadow: 10px 10px 12px 2px $contentBackground;
-    @media(max-width: 720px) {
-      height: auto;
+    .suggestions {
+      font-size: 1.3em;
+      width: 100%;
       overflow-y: auto;
-    }
-
-    * {
-      color: black;
-    }
-
-    .active {
-      height: auto;
-    }
-
-    .suggestion {
-      padding: 0.5% 0 0.5% 1%;
-      align-items: center;
-      width: 99%;
-      @include flex-direction(row);
-      cursor: pointer;
-
-      &__icon {
-        padding-right: 2%;
+      @media(max-width: 720px) {
+        height: auto;
+        overflow-y: auto;
       }
 
-      &__label {
-        width: 10%;
-        @media(max-width: 720px) {
-          width: 30%;
+      * {
+        color: black;
+      }
+
+      .suggestion {
+        padding: 1% 0;
+        align-items: center;
+        width: 99%;
+        @include flex-direction(row);
+        cursor: pointer;
+
+        &__icon {
+          padding-right: 2%;
         }
-      }
 
-      &__desc {
-        font-style: italic;
-        color: gray;
+        &__label {
+          width: 10%;
+          @media(max-width: 720px) {
+            width: 30%;
+          }
+        }
+
+        &__desc {
+          font-style: italic;
+          color: gray;
+        }
       }
     }
   }
@@ -395,7 +380,6 @@
   @include align(space-evenly, flex-start);
   @include flex-direction(row);
   width: 100%;
-  font-size: 1.1em;
   flex-wrap: wrap;
   position: relative;
   padding-bottom: 2em;
@@ -424,7 +408,7 @@
     }
 
     .content {
-      height: 40vh;
+      height: 35vh;
       width: 100%;
       font-size: 1.2em;
       @media(max-width: 720px) {
@@ -511,13 +495,7 @@
       .rssContainer,
       .warning,
       .youtubeSearchContainer {
-        padding: 0 1% 0 2%;
-      }
-
-      .blank,
-      .rssContainer,
-      .warning {
-        margin-bottom: 2vh;
+        padding: 0 1% 2% 2%;
       }
 
       .forecast,
@@ -826,7 +804,7 @@
   background: none;
   padding-bottom: 1em;
   position: relative;
-  top: 97%;
+  bottom: 5%;
 
   .icon {
     font-size: 1.3em;
@@ -895,13 +873,14 @@
         display: none;
       }
 
-      .forecast,.rssContainer {
+      .forecast,
+      .rssContainer {
         height: max-content;
       }
 
       .forecast__header,
-      .youtubeSearchContainer__header,
-      .rssContainer__header {
+      .rssContainer__header,
+      .youtubeSearchContainer__header {
         margin-bottom: 1em;
       }
 
@@ -954,6 +933,7 @@
 
       .youtubeSearchContainer {
         height: 100%;
+
         &__header p {
           width: 100%;
           text-align: center;
