Bug fixes, added loading animation

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -107,6 +107,9 @@
         </span>
       </section>
     </div>
+    <div class="loading flex">
+      <img class="loading__img" alt="Loading image" src="src/scss/icons/interface/loading.png"/>
+    </div>
     <%- include('footer'); %>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8" type="application/javascript"></script>
