--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -151,7 +151,8 @@
   position: sticky;
   top: 0;
   width: 100%;
-  margin-bottom: 2em;
+  padding-bottom: 2em;
+  z-index: 1;
 
   &::before {
     position: absolute;
