--- a/views/addFeedForm.ejs
+++ b/views/addFeedForm.ejs
@@ -5,7 +5,7 @@
     </line>
   </svg>
 </div>
-<div class="addContent menu">
+<div class="addContent justifyCentered">
   <label for="addContent__select">What do you want to add ?</label>
   <select class="addContent__select" name="addContent__select">
     <option value="">Choose a field</option>
