--- a/src/scss/home/app.scss
+++ b/src/scss/home/app.scss
@@ -4,6 +4,7 @@
 @import '../base/fonts';
 @import '../base/body';
 
+@import '../layouts/animations';
 @import '../layouts/blur';
 @import '../layouts/flex';
 @import '../layouts/settings';
