--- a/src/scss/layouts/_settings.scss
+++ b/src/scss/layouts/_settings.scss
@@ -14,7 +14,7 @@
     height: 85%;
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 15px;
-    box-shadow: 10px 10px 12px 2px $contentBackground;
+    @include box-shadow;
     overflow-y: auto;
     overflow-x: hidden;
     @media(max-width: 720px) {
