--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -46,6 +46,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    @include box-shadow;
     @media (max-width: 720px) {
       width: 30vh;
     }
