--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,4 +1,5 @@
 $contentBackground: rgba(0, 0, 0, 0.5);
 $greenChecked: #20df3d;
 $link-color: #0095dd;
+$menu-item-width: 15em;
 $underline-input: rgba(2, 137, 247, 1);
